<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.InfoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_info"
        style="@style/MainToolbar"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/info_toolbar_btn_back"
                style="@style/MainToolbarButton"
                android:layout_gravity="center|start"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/text_desc_image_back" />

            <ImageButton
                android:id="@+id/info_toolbar_btn_done"
                style="@style/MainToolbarButton"
                android:layout_gravity="center|end"
                android:src="@drawable/ic_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/text_desc_image_done" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_contact_photo"
                android:layout_width="@dimen/image_info_size"
                android:layout_height="@dimen/image_info_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/app_big_margin"
                android:contentDescription="@string/text_desc_image_contact"
                android:src="@drawable/default_photo" />

            <EditText
                android:id="@+id/info_contact_name"
                style="@style/PrimaryBigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="0dp"
                android:hint="@string/text_hint_contact_name"
                android:importantForAutofill="no"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/info_contact_surname"
                style="@style/PrimaryBigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_normal_margin"
                android:width="0dp"
                android:hint="@string/text_hint_contact_surname"
                android:importantForAutofill="no"
                android:inputType="textCapSentences" />

            <EditText
                android:id="@+id/info_contact_phone"
                style="@style/PrimaryBigText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_normal_margin"
                android:hint="@string/text_hint_contact_phone_number"
                android:importantForAutofill="no"
                android:inputType="phone" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>